fixed h2 alignment issue

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -395,6 +395,9 @@ i._mi.fa.fa-linkedin {
 	width: 55%;
 	font-size: 1.5em;
 }
+.interested h2 {
+	line-height: 2.25em;
+}
 .contact-page .main-content {
 	max-width: 67%;
 }
